@@ -496,10 +496,8 @@ Window types are in +WINDOW-TYPES+.")
 (defun resize-window (window orig-x orig-y &optional additional-fn additional-arg)
   (raise-window window)
   (let* ((done nil)
-	 (dx (- (xlib:drawable-x window) orig-x))
-	 (dy (- (xlib:drawable-y window) orig-y))
-	 (lx orig-x)
-	 (ly orig-y)
+	 (orig-width (xlib:drawable-width window))
+	 (orig-height (xlib:drawable-height window))
 	 (pointer-grabbed-p (xgrab-pointer-p))
 	 (hints (xlib:wm-normal-hints window))
 	 (min-width (or (and hints (xlib:wm-size-hints-min-width hints)) 0))
@@ -508,11 +506,8 @@ Window types are in +WINDOW-TYPES+.")
 	 (max-height (or (and hints (xlib:wm-size-hints-max-height hints)) most-positive-fixnum)))
     (labels ((motion-notify (&rest event-slots &key root-x root-y &allow-other-keys)
 	       (declare (ignore event-slots))
-	       (setf (xlib:drawable-width window) (min (max (+ (xlib:drawable-width window) (- root-x lx)) 10 min-width) max-width)
-		     (xlib:drawable-height window) (min (max (+ (xlib:drawable-height window) (- root-y ly)) 10 min-height) max-height)
-		     dx (- dx (- root-x lx))
-		     dy (- dy (- root-y ly))
-		     lx root-x ly root-y)
+	       (setf (xlib:drawable-width window) (min (max (+ orig-width (- root-x orig-x)) 10 min-width) max-width)
+		     (xlib:drawable-height window) (min (max (+ orig-height (- root-y orig-y)) 10 min-height) max-height))
 	       (when additional-fn
 	       	 (apply additional-fn additional-arg)))
 	     (handle-event (&rest event-slots &key event-key &allow-other-keys)
